--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body { font-family: "Helvetica Neue", sans-serif; margin:0; }
 .scene { width:100%; height:100vh; display:none; align-items:center; justify-content:center; flex-direction:column; }
 .scene.active { display:flex; }
 #chart { width:90%; height:80%; }
+
 path.country {
   fill: none;
   stroke-width: 1.5px;
@@ -10,4 +11,4 @@ path.country {
   stroke-linecap: round;
 }
 
-line.country.dimmed { opacity:0.1; }
+path.country.dimmed { opacity:0.1; }
